objects/LAT_PromotionalActionKeyBrands__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BrandName__c</fullName>
        <formula>LAT_KeyBrand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marca</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_KeyBrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KeyBrand</label>
        <referenceTo>LAT_KeyBrand__c</referenceTo>
        <relationshipLabel>Marcas</relationshipLabel>
        <relationshipName>Marcas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotional_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ação Promocional</label>
        <referenceTo>LAT_PromotionalAction__c</referenceTo>
        <relationshipLabel>Marcas</relationshipLabel>
        <relationshipName>Marcas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Marca</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Marca Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marcas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>